Users can write their path to terminal now.